add error boundary

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,6 @@
 {
     "язык": "en",
-    "Страница не найдена": "Page Not Found"
+    "Страница не найдена": "Page Not Found",
+    "Произошла непредвиденная ошибка": "uncaugth error",
+    "Обновить страницу": "reload page"
 }
